fixes: Web console displays a blank page- white space instead of cluster information

--- a/frontend/public/style/_layout.scss
+++ b/frontend/public/style/_layout.scss
@@ -32,6 +32,13 @@ body,
   flex-direction: column;
 }
 
+.co-m-app__content {
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+  height: 100% // doesn't work on safari without height 
+}
+
 .co-p-has-sidebar {
   position: relative;
   display: flex;
